--- a/data/blog/fourth-wave-of-education-grants.mdx
+++ b/data/blog/fourth-wave-of-education-grants.mdx
@@ -60,7 +60,7 @@ With support from this grant, Librería de Satoshi will expand its curriculum
 into new languages, offering courses in both Portuguese and English for the
 first time. The team plans to incorporate game-based and design-driven learning
 strategies across its offerings and introduce new classes, including personal
-finance courses for women---taught in Spanish---and a self-custody course
+finance courses for women—taught in Spanish—and a self-custody course
 available both online and in person. The project will continue helping students
 and alumni gain access to bitcoin-related job opportunities and open-source
 projects.
@@ -77,8 +77,8 @@ South. The program runs a year-long course that includes monthly calls, online
 assessments, scholarships, and a sats-based rewards system to encourage
 completion and engagement. The curriculum takes a non-partisan, humanitarian
 approach, emphasizing bitcoin's potential to serve people across political and
-social lines. To date, 37 graduates from 14 countries---including Ghana, Kenya,
-Nigeria, Uganda, Zambia, and Zimbabwe---have completed the program. Several
+social lines. To date, 37 graduates from 14 countries—including Ghana, Kenya,
+Nigeria, Uganda, Zambia, and Zimbabwe—have completed the program. Several
 graduates are already making an impact, including Marcel Lorraine of [Bitcoin
 Dada](https://btcdada.com/about/), Sarah White of [African
 Bitcoiners](https://bitcoiners.africa/about-us/), and Megasley of [Free Routing
@@ -89,8 +89,8 @@ censorship-resistant archive of its educational videos by deploying a
 self-hosted [PeerTube](https://joinpeertube.org/) instance through
 [Flokinet](https://flokinet.is/), a provider known for anonymous and
 privacy-focused infrastructure. The team will also translate full course content
-into Swahili---a language spoken by over 50 million people across East
-Africa---to expand course offerings, and publish all transcripts and course
+into Swahili—a language spoken by over 50 million people across East
+Africa—to expand course offerings, and publish all transcripts and course
 materials to GitHub to support broader reuse and localization. In doing so,
 Crack the Orange aims to make its curriculum more accessible, resilient, and
 inclusive for a growing global audience.
@@ -118,7 +118,7 @@ by launching a 10-week "Bitcoin Diploma" course in Portuguese, combining
 recorded lessons with weekly live virtual discussions. They will also introduce
 their first merchant-focused workshop, tailored to the needs of local business
 owners exploring Bitcoin adoption. The course will include advanced content, and
-all educational materials---video content and manuals---will be freely
+all educational materials—video content and manuals—will be freely
 accessible via their website and published under a Creative Commons license.
 
 Website: [freemadeira.com](http://www.freemadeira.com)  
