Remove ad-like language

--- a/data/blog/fourth-wave-of-education-grants.mdx
+++ b/data/blog/fourth-wave-of-education-grants.mdx
@@ -86,9 +86,8 @@ Africa](https://freerouting.africa/about-us/), among others.
 
 With support from this grant, Crack the Orange will create a
 censorship-resistant archive of its educational videos by deploying a
-self-hosted [PeerTube](https://joinpeertube.org/) instance through
-[Flokinet](https://flokinet.is/), a provider known for anonymous and
-privacy-focused infrastructure. The team will also translate full course content
+self-hosted [PeerTube](https://joinpeertube.org/) instance.
+The team will also translate full course content
 into Swahili—a language spoken by over 50 million people across East
 Africa—to expand course offerings, and publish all transcripts and course
 materials to GitHub to support broader reuse and localization. In doing so,
