Apply suggestions from code review
Co-authored-by: optout <13562139+optout21@users.noreply.github.com>

--- a/data/blog/advancements-in-lightning-infrastructure.mdx
+++ b/data/blog/advancements-in-lightning-infrastructure.mdx
@@ -111,8 +111,8 @@ As part of the ongoing effort to integrate Splicing into LDK, project developer
 [Optout](https://github.com/optout21) has been conducting end-to-end testing in
 `ldk-node`, `ldk-sample`, and `ldk-node-sample`, assessing stability and
 readiness for integration. Although several foundational pull requests have been
-merged, further work is needed to refine interoperability and finalize message
-flows before Splicing is fully production-ready within LDK. Once complete, it
+merged, further work is needed to finalize integration into LDK and
+ensure interoperability before Splicing is fully production-ready within LDK. Once complete, it
 will bring a substantial improvement to how wallets and applications manage
 Lightning liquidity, reducing on-chain costs and making user experiences more
 efficient.
