Remove some instances of `enable` in place of other words

--- a/data/blog/advancements-in-lightning-infrastructure.mdx
+++ b/data/blog/advancements-in-lightning-infrastructure.mdx
@@ -13,7 +13,7 @@ building beyond the base layer. The Lightning Network is leading that
 charge—and thanks to dedicated open-source contributors, it's becoming faster,
 more secure, and easier to use every day. While the base layer ensures
 decentralization and security, higher layers with different trade-off
-characteristics are required to enable high-velocity micro-transactions,
+characteristics are required to facilitate high-velocity micro-transactions,
 streaming payments, and everyday commerce. That’s where Lightning comes in.
 
 As bitcoin++ organizer and Lightning Developer Lisa Neigut explains:
@@ -43,7 +43,7 @@ the Lightning Network.
 ### Splicing
 
 [Splicing](https://lightningsplice.com/splicing_explained.html) has long been
-recognized as a crucial upgrade for the Lightning Network, enabling users to
+recognized as a crucial upgrade for the Lightning Network, allowing users to
 dynamically adjust channel capacity without downtime. By removing the need to
 close and reopen channels, Splicing not only reduces friction and costs but also
 streamlines liquidity management.
@@ -82,7 +82,7 @@ Dusty explains:
 
 >The dream of higher-privacy decentralized on-chain coin sharing is brought
 >ever so closer to reality with these improvements. These privacy projects have
->always been separate from Lightning but Splicing enables them to be merged
+>always been separate from Lightning but Splicing makes it possible to merge them
 >together, creating a larger base from which to derive anonymity.
 
 As regulatory pressures mount, building resilient, decentralized infrastructure
@@ -166,7 +166,7 @@ As Christian Decker, Core Engineer at Blockstream put it:
 
 Looking ahead, VLS aims for full mainnet readiness within a year, with plans 
 to add support for new Lightning features like splicing and dual funding. 
-The team is also focusing on enabling enterprises to confidently manage millions 
+The team is also focusing on helping enterprises to confidently manage millions 
 in channel funds. Additionally, planned developments include improved support 
 for routing and security features such as VLS running on secure enclaves. 
 In the future, the project aims to introduce multi-sig capabilities for Lightning 
@@ -223,7 +223,7 @@ lead Blake Johnson emphasizes the importance of interoperability testing:
 
 Looking ahead, BLAST is preparing for the next development phase, focusing on
 creating lightweight models for different LN implementations, followed by
-automation features that enable reproducible network states. Incremental
+automation features that support reproducible network states. Incremental
 improvements will continue rolling out, ensuring that BLAST remains a meaningful
 tool for interoperability research. As Lightning adoption grows, the need for
 independent, large-scale testing frameworks will only become more critical, and
