Edit URL to link to source

--- a/data/blog/eleventh-wave-of-nostr-grants.mdx
+++ b/data/blog/eleventh-wave-of-nostr-grants.mdx
@@ -86,7 +86,7 @@ License: GPL v3.0
 Vertex provides Web of Trust infrastructure for nostr, helping client developers
 filter spam, personalize content, and preserve decentralization. The service
 continuously crawls nostr relays to map [the social
-graph](https://highlighter.com/pippellia@verified-nostr.com/Navigating-the-social-graph-991l9n)
+graph](https://pippellia.com/pippellia/Social+Graph/Navigating+the+social+graph)
 and applies [PageRank-style](https://en.wikipedia.org/wiki/PageRank) algorithms
 to return relevance-ranked results through
 [DVM](https://github.com/nostr-protocol/nips/blob/master/90.md) requests. The
