Rename to Nostr Double Ratchet
"Secure Direct Messages" is too generic

--- a/data/blog/eleventh-wave-of-nostr-grants.mdx
+++ b/data/blog/eleventh-wave-of-nostr-grants.mdx
@@ -20,7 +20,7 @@ The five projects receiving support in this wave are:
 - [Swae](#swae)
 - [HAMSTR](#hamstr)
 - [Vertex](#vertex)
-- [Secure Direct Messages](#secure-direct-messages)
+- [Nostr Double Ratchet](#nostr-double-ratchet)
 - [Nostr Game Engine](#nostr-game-engine)
 
 Our support for nostr is made possible by the generosity of our donors. Their
@@ -106,9 +106,9 @@ infrastructure requirements for clients.
 Repositories: [vertex-lab](https://github.com/vertex-lab)  
 License: MIT
 
-### Secure Direct Messages
+### Nostr Double Ratchet
 
-Secure Direct Messages brings end-to-end encrypted private messaging to nostr
+Nostr Double Ratchet brings end-to-end encrypted private messaging to nostr
 clients by offering a library that implements the Double Ratchet algorithm. By
 protecting message metadata and securing histories even if a user's nostr key is
 compromised, this approach significantly enhances privacy across the network.
