Add links to NIP-117 & NIP-118

--- a/data/blog/eleventh-wave-of-nostr-grants.mdx
+++ b/data/blog/eleventh-wave-of-nostr-grants.mdx
@@ -121,8 +121,8 @@ webhook subscriptions.
 Upcoming milestones include group messaging support, multi-device session
 management [modeled on Signal](https://signal.org/docs/specifications/sesame/),
 and the public release of Double Ratchet in Damus. The team also plans to
-finalize and standardize the protocol through [NIPs 117 and
-118](https://github.com/nostr-protocol/nips/pull/1813/commits), expanding
+finalize and standardize the protocol through [NIP-117](https://github.com/mmalmi/nips/blob/double-ratchet/117.md) and
+[NIP-118](https://github.com/mmalmi/nips/blob/double-ratchet/118.md), expanding
 integration across both web and native clients. This work aims to make secure,
 decentralized messaging a native capability across the nostr ecosystem.
 
