--- a/data/blog/eleventh-wave-of-nostr-grants.mdx
+++ b/data/blog/eleventh-wave-of-nostr-grants.mdx
@@ -62,7 +62,7 @@ the network in regions without internet, under censorship, or during
 infrastructure outages. By bridging off-grid clients with internet-connected
 relay gateways through packet radio, HAMSTR delivers resilient messaging
 optimized for extremely low-bandwidth transmission. The current implementation
-supports full [kind:1](https://github.com/nostr-protocol/nips/blob/master/10.md)
+supports full [`kind:1`](https://github.com/nostr-protocol/nips/blob/master/10.md)
 note exchange with compression, error correction, and local key storage—all
 accessible via a web-based client.
 
