Link to mission

--- a/data/blog/eleventh-wave-of-nostr-grants.mdx
+++ b/data/blog/eleventh-wave-of-nostr-grants.mdx
@@ -162,8 +162,8 @@ License: BSD-3-Clause
 We're proud to support these projects and look forward to their continued
 contributions to the nostr ecosystem. OpenSats will continue funding free and
 open-source work that strengthens decentralization, privacy, and resilience. If
-you're building something aligned with these values, [we encourage you to
-apply](/apply).
+you're building something aligned with [our mission](/mission), we encourage you
+to [apply for funding](/apply).
 
 Our support for nostr is made possible by the generosity of our donors. To
 support the developers building open tools for the nostr ecosystem, consider
