Link to NostrGameEngine repo

--- a/data/blog/eleventh-wave-of-nostr-grants.mdx
+++ b/data/blog/eleventh-wave-of-nostr-grants.mdx
@@ -154,7 +154,7 @@ full-featured, cross-platform engine for browsers, desktops, and mobile that
 requires only a nostr relay as the backend—significantly reducing
 infrastructure burdens for independent creators.
 
-Repository: [github.com/riccardobl](http://github.com/riccardobl)  
+Repository: [NostrGameEngine/ngengine](https://github.com/NostrGameEngine/ngengine)  
 License: BSD-3-Clause
 
 ---
