Link to ngengine.org

--- a/data/blog/eleventh-wave-of-nostr-grants.mdx
+++ b/data/blog/eleventh-wave-of-nostr-grants.mdx
@@ -133,7 +133,7 @@ License: MIT
 
 ### Nostr Game Engine
 
-[Nostr Game Engine](https://nge.rblb.it/) is building a free, open-source,
+[Nostr Game Engine](https://ngengine.org/) is building a free, open-source,
 royalty-free engine for game developers—powered by nostr. Built using
 [jMonkeyEngine](https://github.com/jMonkeyEngine/jmonkeyengine?tab=readme-ov-file#jmonkeyengine),
 the project replaces traditional centralized systems with nostr-native modules
