--- a/data/blog/eleventh-wave-of-nostr-grants.mdx
+++ b/data/blog/eleventh-wave-of-nostr-grants.mdx
@@ -25,7 +25,7 @@ The five projects receiving support in this wave are:
 
 Our support for nostr is made possible by the generosity of our donors. Their
 contributions help us support innovative, mission-aligned projects like these.
-If you'd like to help sustain this work, consider donating to *The Nostr Fund*:
+If you'd like to help sustain this work, consider donating to The Nostr Fund:
 
 <center>
     <DonateToNostrFundButton/>
