Link to Double Ratchet

--- a/data/blog/eleventh-wave-of-nostr-grants.mdx
+++ b/data/blog/eleventh-wave-of-nostr-grants.mdx
@@ -109,7 +109,7 @@ License: MIT
 ### Nostr Double Ratchet
 
 Nostr Double Ratchet brings end-to-end encrypted private messaging to nostr
-clients by offering a library that implements the Double Ratchet algorithm. By
+clients by offering a library that implements the [Double Ratchet][DR] algorithm. By
 protecting message metadata and securing histories even if a user's nostr key is
 compromised, this approach significantly enhances privacy across the network.
 The protocol is currently available as a TypeScript library and integrated into
@@ -130,6 +130,8 @@ decentralized messaging a native capability across the nostr ecosystem.
 Repository:
 [mmalmi/nostr-double-ratchet](https://github.com/mmalmi/nostr-double-ratchet)  
 License: MIT
+
+[DR]: https://en.wikipedia.org/wiki/Double_Ratchet_Algorithm
 
 ### Nostr Game Engine
 
