Use regular donate button

--- a/data/blog/advancements-in-lightning-infrastructure.mdx
+++ b/data/blog/advancements-in-lightning-infrastructure.mdx
@@ -355,7 +355,7 @@ worldwide to transact freely and securely. Together, we can build a future where
 Bitcoin remains open, accessible, and unstoppable.
 
 <center>
-    <DonateRecurringButton/>
+    <DonateToGeneralFundButton/>
 </center>
 
 If you are a developer working on open-source software that makes Lightning even
