Fix blockquote & citation formatting

--- a/data/blog/advancements-in-lightning-infrastructure.mdx
+++ b/data/blog/advancements-in-lightning-infrastructure.mdx
@@ -252,8 +252,9 @@ predictable development process for LDK-based implementations like Lampo.
 >Building reliable Lightning infrastructure requires both rigorous testing and
 >continuous improvements. The LDK-Lnprototest integration and enhancements to
 >Lampo aim to make the network more robust and developer-friendly. Excited to
->push this forward! 
->—Prakhar Saxena, Lampo Project Lead
+>push this forward!
+>
+><cite>—Prakhar Saxena, Lampo Project Lead</cite>
 
 In addition to improving the Lightning testing environment, Lampo has also
 [introduced
