Update information about waye in FAQ

--- a/data/pages/faq-grantees.mdx
+++ b/data/pages/faq-grantees.mdx
@@ -194,10 +194,10 @@ the Bitcoin and/or Nostr ecosystems.
 
 If you're feeling overwhelmed, [reach out to us][c] and let us know.
 
-In addition, please know that [Waye](https://www.waye.dev/about) offers
+In addition, please know that [Waye](https://www.waye.dev) offers
 structured support to help developers manage stress and avoid burnout through
 programs with group discussions, coaching, and reflection tools. You can reach
-them at [waye.dev@gmail.com](mailto:waye.dev@gmail.com)
+them at [hello@waye.dev](mailto:hello@waye.dev)
 
 ### Can I pause my grant?
 
