Add store IDs to funds

--- a/data/funds/general.mdx
+++ b/data/funds/general.mdx
@@ -12,6 +12,7 @@ hidden: false
 bonusUSD: 20670000
 zaprite: '32WbND8heqmY5wYYnIpa'
 btcpay: 'general_fund'
+store: '44CuVJv4hkAyY9qUsaQL2nsAwjG9H5RiS23k4UqGx7TG'
 tags: ['OpenSats', 'Fund']
 ---
 
