--- a/data/funds/nostr.mdx
+++ b/data/funds/nostr.mdx
@@ -10,6 +10,7 @@ twitter: 'opensats'
 nostr: 'npub10pensatlcfwktnvjjw2dtem38n6rvw8g6fv73h84cuacxn4c28eqyfn34f'
 zaprite: 'OoYtzNjilW1NRtDsxLAj'
 btcpay: 'nostr'
+store: 'FTJT37saZKH96U6RjekQtueMBKzYajzEWLDjpTAY7QUw'
 tags: ['OpenSats', 'Fund']
 bonusUSD: 10000000
 ---
