--- a/data/funds/ops.mdx
+++ b/data/funds/ops.mdx
@@ -10,6 +10,7 @@ website: 'https://opensats.org/'
 git: 'https://github.com/OpenSats'
 zaprite: 'lZo1wcsJ0SQb58XfGC4e'
 btcpay: 'opensats_operations_budget'
+store: 'HudVcHrn8q4KpgaNTcwx1soLzYoEFAzvRuBXhAncbjF5'
 tags: ['OpenSats', 'Fund']
 bonusUSD: 1580000
 ---
