feat(ty): add links to transparency and impact

--- a/data/pages/thankyou.mdx
+++ b/data/pages/thankyou.mdx
@@ -9,6 +9,8 @@ Thank you for your generous donation!
 
 We will make sure to use the donated funds to further [our mission] and support
 the [projects] that align with it. 
+the [projects] that align with it. Have a look at our [transparency] page as
+well as our [impact reports] to learn more.
 
 If you have any questions, please reach out to support@opensats.org 
 
@@ -17,3 +19,5 @@ Return to [opensats.org]
 [our mission]: /mission
 [projects]: /projects
 [opensats.org]: /
+[transparency]: /transparency
+[impact reports]: /tags/impact
