feat(ty): remove link to projects to not overwhelm

--- a/data/pages/thankyou.mdx
+++ b/data/pages/thankyou.mdx
@@ -8,7 +8,7 @@ layout: PageLayout
 Thank you for your generous donation!
 
 We will make sure to use the donated funds to further [our mission] and support
-the [projects] that align with it. Have a look at our [transparency] page as
+the projects that align with it. Have a look at our [transparency] page as
 well as our [impact reports] to learn more.
 
 If you have any questions, please reach out to support@opensats.org
@@ -16,7 +16,6 @@ If you have any questions, please reach out to support@opensats.org
 Return to [opensats.org]
 
 [our mission]: /mission
-[projects]: /projects
 [opensats.org]: /
 [transparency]: /transparency
 [impact reports]: /tags/impact
