--- a/data/pages/thankyou.mdx
+++ b/data/pages/thankyou.mdx
@@ -8,14 +8,11 @@ layout: PageLayout
 Thank you for your generous donation!
 
 We will make sure to use the donated funds to further [our mission] and support
-the projects that align with it. Have a look at our [transparency] page as
-well as our [impact reports] to learn more.
+the projects that align with it. Have a look at the [impact reports] that are
+linked in our [transparency] page to learn more.
 
-If you have any questions, please reach out to support@opensats.org
-
-Return to [opensats.org]
+If you have any questions, please don't hesitate to [reach out to us](/contact).
 
 [our mission]: /mission
-[opensats.org]: /
 [transparency]: /transparency
 [impact reports]: /tags/impact
