Apply suggestions from code review
Co-authored-by: ARVIN <141419722+Arvin21M@users.noreply.github.com>

--- a/data/pages/thankyou.mdx
+++ b/data/pages/thankyou.mdx
@@ -7,11 +7,10 @@ layout: PageLayout
 
 Thank you for your generous donation!
 
-We will make sure to use the donated funds to further [our mission] and support
-the projects that align with it. Have a look at the [impact reports] that are
-linked in our [transparency] page to learn more.
+We are committed to using these funds to further [our mission] and support aligned projects.
+To learn how donations like yours are making an impact, visit our [transparency] page and explore the [impact reports].
 
-If you have any questions, please don't hesitate to [reach out to us](/contact).
+If you have any questions, please [reach out to us](/contact).
 
 [our mission]: /mission
 [transparency]: /transparency
