style(ty): wrap

--- a/data/pages/thankyou.mdx
+++ b/data/pages/thankyou.mdx
@@ -7,8 +7,9 @@ layout: PageLayout
 
 Thank you for your generous donation!
 
-We are committed to using these funds to further [our mission] and support aligned projects.
-To learn how donations like yours are making an impact, visit our [transparency] page and explore the [impact reports].
+We are committed to using these funds to further [our mission] and support
+aligned projects.  To learn how donations like yours are making an impact, visit
+our [transparency] page and explore the [impact reports].
 
 If you have any questions, please [reach out to us](/contact).
 
