Remove duplicate quotation marks

--- a/data/blog/snowcait-receives-lts-grant.mdx
+++ b/data/blog/snowcait-receives-lts-grant.mdx
@@ -53,10 +53,10 @@ SnowCait's vision is to support diverse user needs through flexible, low-cost
 software while continuing to build an open infrastructure that strengthens the
 connection between nostr and the broader Bitcoin ecosystem.
 
-> "I would like to continue to enrich the Nostr ecosystem and increase the
+> I would like to continue to enrich the Nostr ecosystem and increase the
 > number of Nostr users, developers, and operators [...] through Nostr I have
 > become interested in Bitcoin, so I would like to strengthen wallet integration
-> and explore what else I can do."
+> and explore what else I can do.
 >
 > <cite>–SnowCait</cite>
 
