--- a/data/blog/snowcait-receives-lts-grant.mdx
+++ b/data/blog/snowcait-receives-lts-grant.mdx
@@ -26,7 +26,7 @@ hours](https://github.com/SnowCait/nostr-hours), and various bots that assist
 with user discovery, content search, and bitcoin price tracking.
 
 These efforts have helped grow the ecosystem by making it more approachable,
-interoperable, and efficient---lowering the barrier to participation across
+interoperable, and efficient—lowering the barrier to participation across
 roles and use cases.
 
 Long-term support will allow SnowCait to maintain core projects while launching
