Add "nostr" for clarity

--- a/data/blog/snowcait-receives-lts-grant.mdx
+++ b/data/blog/snowcait-receives-lts-grant.mdx
@@ -64,7 +64,7 @@ Our [mission](/mission) at OpenSats is to provide
 sustainable funding for the builders and maintainers of critical open-source
 infrastructure within the Bitcoin and nostr ecosystem.
 
-The [LTS program](/blog/nostr-lts-long-term-support-for-nostr-developers)
+The [nostr LTS program](/blog/nostr-lts-long-term-support-for-nostr-developers)
 is made possible by generous donors like you. To continue supporting important
 work from contributors like SnowCait, consider donating to [The Nostr
 Fund](/funds/nostr).
