Improve wording around mission

--- a/data/blog/snowcait-receives-lts-grant.mdx
+++ b/data/blog/snowcait-receives-lts-grant.mdx
@@ -62,9 +62,10 @@ connection between nostr and the broader Bitcoin ecosystem.
 
 Our [mission](/mission) at OpenSats is to provide
 sustainable funding for the builders and maintainers of critical open-source
-infrastructure within the Bitcoin and nostr ecosystem.
+infrastructure, especially bitcoin-related projects and projects that help
+bitcoin flourish.
 
-The [nostr LTS program](/blog/nostr-lts-long-term-support-for-nostr-developers)
+The [Nostr LTS program](/blog/nostr-lts-long-term-support-for-nostr-developers)
 is made possible by generous donors like you. To continue supporting important
 work from contributors like SnowCait, consider donating to [The Nostr
 Fund](/funds/nostr).
