Add LTS section to /transparency

--- a/data/pages/transparency.mdx
+++ b/data/pages/transparency.mdx
@@ -40,12 +40,17 @@ as in the internal and external processes of our organization.
 - [EOY Report: 2023](/blog/2023-year-in-review)
 - [EOY Report: 2024](/blog/2024-year-in-review)
 
-## Grants & Grantees
+## Project Grants
 
 - [List of Bitcoin Grants](/tags/bitcoin)
 - [List of Nostr Grants](/tags/nostr)
 - [List of Education Grants](/tags/education)
-- [List of LTS Grantees](/tags/lts)
+
+## Long-Term Support Grants
+
+- [LTS Grantees: Bitcoin Core](/tags/lts/core)
+- [LTS Grantees: Bitcoin](/tags/lts/bitcoin)
+- [LTS Grantees: Nostr](/tags/lts/nostr)
 
 ## Grant Selection & Agreement
 
