Apply suggestions from code review
Co-authored-by: ARVIN <141419722+Arvin21M@users.noreply.github.com>

--- a/data/pages/transparency.mdx
+++ b/data/pages/transparency.mdx
@@ -42,9 +42,9 @@ as in the internal and external processes of our organization.
 
 ## Project Grants
 
-- [List of Bitcoin Grants](/tags/bitcoin)
-- [List of Nostr Grants](/tags/nostr)
-- [List of Education Grants](/tags/education)
+- [List of Bitcoin Grants](/tags/bitcoin/wave)
+- [List of Nostr Grants](/tags/nostr/wave)
+- [List of Education Grants](/tags/education/wave)
 
 ## Long-Term Support Grants
 
