Add content body images (africa free routing & bitshala)

--- a/data/blog/advancements-in-developer-training.mdx
+++ b/data/blog/advancements-in-developer-training.mdx
@@ -129,7 +129,7 @@ Lightning primitives, and work through real-world problems in group settings.
 The bootcamp closed with participant-led demos focused on solving challenges
 specific to African markets.
 
-![](todo)
+![](/static/images/blog/blog/developer-training-q2-2025/advancements-in-developer-training-africa-free-routing.jpg)
 
 > "Eye-opening, empowering, and deeply rewarding–I've gained valuable skills
 > and a strong sense of community."
@@ -288,7 +288,7 @@ The event was followed by the BitPlebs Summit, a 150-person community gathering
 with talks, panels, and demos focused on strengthening India's broader Bitcoin
 ecosystem.
 
-![](todo)
+![](/static/images/blog/blog/developer-training-q2-2025/advancements-in-developer-training-bitshala.jpg)
 
 Bitshala is also investing in reproducibility. Behind the scenes, it's building
 public playbooks, internal dashboards, and lightweight infrastructure to help
