Remove double quotation marks

--- a/data/blog/advancements-in-developer-training.mdx
+++ b/data/blog/advancements-in-developer-training.mdx
@@ -77,10 +77,10 @@ maintenance in [BDK](https://github.com/bitcoindevkit/bdk/pull/1011). Many of
 these contributions were merged into production repositories, directly improving
 infrastructure across widely used Bitcoin tools and libraries.
 
-> "The Summer of Bitcoin project has been a great training and recruiting tool
+> The Summer of Bitcoin project has been a great training and recruiting tool
 > for the BDK project. Myself and other BDK developers have mentored multiple
 > students over the years, many of whom have gone on to work on BDK or other
-> Bitcoin projects."
+> Bitcoin projects.
 >
 > <cite>–[Steve Myers](https://github.com/notmandatory), contributor to Bitcoin
 > Dev</cite>
@@ -96,9 +96,9 @@ active contributors to participate as their time permits. Many returning mentors
 are alumni of the program themselves–contributing to a mentorship loop that
 deepens over time and strengthens the contributor base from within.
 
-> "Over the past four years, I've watched many Summer of Bitcoin alumni grow
+> Over the past four years, I've watched many Summer of Bitcoin alumni grow
 > into confident contributors to multiple open-source Bitcoin projects and
-> secure roles in the industry."
+> secure roles in the industry.
 >
 > <cite>–[Conor Okus](https://github.com/ConorOkus), Spiral</cite>
 
@@ -131,8 +131,8 @@ specific to African markets.
 
 ![](/static/images/blog/developer-training-q2-2025/advancements-in-developer-training-africa-free-routing.jpg)
 
-> "Eye-opening, empowering, and deeply rewarding–I've gained valuable skills
-> and a strong sense of community."
+> Eye-opening, empowering, and deeply rewarding–I've gained valuable skills
+> and a strong sense of community.
 >
 > <cite>–Setutsi Adzei, Bootcamp participant</cite>
 
@@ -144,9 +144,9 @@ track](https://blog.btrust.tech/introducing-the-btrust-builders-pathways/)–a
 structured continuation that gives them long-term support as they grow into
 confident, independent contributors.
 
-> "It's a great thing to be part of this bootcamp. Prior to this bootcamp, I
+> It's a great thing to be part of this bootcamp. Prior to this bootcamp, I
 > didn't know much about Bitcoin development and the Lightning Network, and now
-> I can say for sure that I am very enthusiastic to be part of this journey."
+> I can say for sure that I am very enthusiastic to be part of this journey.
 >
 > <cite>–Perez Yeboah, Bootcamp participant</cite>
 
@@ -184,11 +184,11 @@ collaborate with maintainers, and navigate real-world technical challenges under
 active mentorship. It's a fast-paced, high-expectation environment designed to
 accelerate skill development and readiness for contributors.
 
-> "What surprised me most was the quality of discussions and instructors, as
+> What surprised me most was the quality of discussions and instructors, as
 > well as the high level of commitment and purpose among participants. [...] I
 > can honestly say the BDL completely transformed my career path. I had always
 > wanted to work in the BOSS ecosystem, but without the program, that career
-> transition might never have happened."
+> transition might never have happened.
 >
 > <cite>–G.L., Bitcoin Dev Launchpad cohort graduate</cite>
 
@@ -211,10 +211,10 @@ prototype design. Their work includes PRs in core components, increased test
 coverage, differential fuzzing of Lightning implementations, and prototype
 development on emerging ideas like hash rate aggregators.
 
-> "Brazil is without a doubt attracting attention from the global Bitcoin
+> Brazil is without a doubt attracting attention from the global Bitcoin
 > builder community. The Bitcoin Dev Launchpad is helping accelerate that
 > momentum–taking people from zero Bitcoin knowledge to contributing to major
-> open-source projects in just six months."
+> open-source projects in just six months.
 >
 > <cite>–Lucas Ferreira, founder of Vinteum</cite>
 
@@ -263,9 +263,9 @@ new participants–creating a peer-led model of education and knowledge sharing.
 As of Q1 2025, Bitshala had seven active fellows, including those working on
 Bitcoin Core and researching features like covenants and silent payments.
 
-> "Bitshala is the best thing that has ever happened to the Indian Bitcoin
+> Bitshala is the best thing that has ever happened to the Indian Bitcoin
 > technical scene. It's the first time I've seen this level of energy,
-> coordination, and long-term vision around Bitcoin FOSS in the region."
+> coordination, and long-term vision around Bitcoin FOSS in the region.
 >
 > <cite>–Anon Senior Developer in the Indian Bitcoin community</cite>
 
