Fix title in citation

--- a/data/blog/advancements-in-developer-training.mdx
+++ b/data/blog/advancements-in-developer-training.mdx
@@ -83,7 +83,7 @@ infrastructure across widely used Bitcoin tools and libraries.
 > Bitcoin projects.
 >
 > <cite>–[Steve Myers](https://github.com/notmandatory), contributor to Bitcoin
-> Dev</cite>
+> Dev Kit</cite>
 
 Support from OpenSats has helped fund intern stipends, mentor gratuities, and
 core program operations. The results extend well beyond the internship period.
