--- a/data/blog/advancements-in-developer-training.mdx
+++ b/data/blog/advancements-in-developer-training.mdx
@@ -151,7 +151,7 @@ confident, independent contributors.
 > <cite>–Perez Yeboah, Bootcamp participant</cite>
 
 The bootcamps are just one part of a larger push. Africa Free Routing is
-building out the infrastructure to support long-term growth–from developer
+building out the infrastructure to support long-term growth from developer
 networks to follow-up mentorship and community engagement.
 
 OpenSats' support has also helped fund venues, materials, and post-bootcamp
