--- a/data/blog/advancements-in-developer-training.mdx
+++ b/data/blog/advancements-in-developer-training.mdx
@@ -12,7 +12,7 @@ A thriving Bitcoin ecosystem depends on developers with a deep understanding of
 Bitcoin's core principles, who can navigate the intricacies of its protocol and
 are equipped to meaningfully contribute to its continuous evolution. To help new
 contributors reach this level of competence and confidence, there must be clear
-pathways into open-source Bitcoin development–pathways that are accessible,
+pathways into open-source Bitcoin development that are accessible,
 practical, and sustainable.
 
 To that end, OpenSats supports [education initiatives](/tags/education) that
