--- a/data/blog/advancements-in-developer-training.mdx
+++ b/data/blog/advancements-in-developer-training.mdx
@@ -91,7 +91,7 @@ Of the 158 [alumni](https://www.summerofbitcoin.org/alumni) who have since
 graduated, 35% are now working in Bitcoin–either through open-source grants,
 roles at Bitcoin companies, or ongoing educational work. Over thirteen alumni
 have returned as mentors, guiding new contributors on projects such as BDK,
-Fedimint, Galoy, and libsecp256k1. The mentor network rotates annually, allowing
+Fedimint, Galoy, and `libsecp256k1`. The mentor network rotates annually, allowing
 active contributors to participate as their time permits. Many returning mentors
 are alumni of the program themselves–contributing to a mentorship loop that
 deepens over time and strengthens the contributor base from within.
