Edit to restructure/refine

--- a/data/blog/twelfth-wave-of-nostr-grants.mdx
+++ b/data/blog/twelfth-wave-of-nostr-grants.mdx
@@ -14,9 +14,9 @@ this evolution is a diverse set of tools that strengthen nostr's utility, from
 secure key management and signing workflows to decentralized collaboration and
 user-centric relay experiences.
 
-This round of funding features five first-time grants for projects focused on
-advancing the protocol across key areas like identity, coordination, and
-usability:
+This round of funding features five first-time grants for projects advancing the
+protocol in identity management, secure signing, decentralized collaboration,
+relay coordination, and cross-protocol integration:
 
 - [Frostr](#frostr)
 - [Aegis](#aegis)
