Edit image file name + slight wording edit

--- a/data/blog/twelfth-wave-of-nostr-grants.mdx
+++ b/data/blog/twelfth-wave-of-nostr-grants.mdx
@@ -3,7 +3,7 @@ title: "Twelfth Wave of Nostr Grants"
 date: '2025-06-30'
 tags: ['OpenSats', 'grants', 'nostr', 'wave']
 authors: ['arvin', 'default']
-images: ['/static/images/blog/TODO.jpg']
+images: ['/static/images/blog/80-twelfth-wave-of-nostr-grants.jpg']
 draft: false
 summary: "OpenSats is funding nine more open-source projects advancing the nostr ecosystem."
 ---
@@ -16,7 +16,7 @@ user-centric relay experiences.
 
 This round of funding features five first-time grants for projects advancing the
 protocol in identity management, secure signing, decentralized collaboration,
-relay coordination, and cross-protocol integration:
+relay discovery, and cross-protocol integration:
 
 - [Frostr](#frostr)
 - [Aegis](#aegis)
