Edit to replace "wave" >> "round"

--- a/data/blog/twelfth-wave-of-nostr-grants.mdx
+++ b/data/blog/twelfth-wave-of-nostr-grants.mdx
@@ -202,7 +202,7 @@ that have delivered value to users and developers alike. These renewals
 recognize their ongoing impact and provide the resources needed to keep
 building, iterating, and hardening essential components of the nostr stack.
 
-Including this wave of funding, OpenSats is proud to have allocated over $XY
+Including this round of funding, OpenSats is proud to have allocated over $XY
 from [The Nostr Fund](/funds/nostr)—marking a mid-year milestone in our
 mission to support critical tools, infrastructure, and developers across the
 nostr ecosystem.
