Edit to add space and comma
Co-authored-by: Bayer <55212954+Bayernatoor@users.noreply.github.com>

--- a/data/blog/twelfth-wave-of-nostr-grants.mdx
+++ b/data/blog/twelfth-wave-of-nostr-grants.mdx
@@ -92,7 +92,7 @@ License: MIT
 Aegis is a lightweight, cross-platform nostr signer that offers a seamless and
 secure experience across mobile and desktop environments. Initially launched for
 iOS and available through TestFlight, Aegis enables persistent background
-connectionscritical for maintaining uninterrupted signing sessions,
+connections, critical for maintaining uninterrupted signing sessions,
 especially on mobile devices. Built using
 [Flutter](https://github.com/flutter/flutter), it supports a variety of
 connection methods and introduces simple nostr key management in a user-friendly
