--- a/data/blog/twelfth-wave-of-nostr-grants.mdx
+++ b/data/blog/twelfth-wave-of-nostr-grants.mdx
@@ -202,10 +202,11 @@ that have delivered value to users and developers alike. These renewals
 recognize their ongoing impact and provide the resources needed to keep
 building, iterating, and hardening essential components of the nostr stack.
 
-Including this round of funding, OpenSats is proud to have allocated over $XY
-from [The Nostr Fund](/funds/nostr)—marking a mid-year milestone in our
-mission to support critical tools, infrastructure, and developers across the
-nostr ecosystem.
+Including this round of funding, OpenSats is proud to have
+[allocated close to $10MM](/transparency)
+since the creation of _The Nostr Fund_
+—marking a mid-year milestone in our mission to support critical tools,
+infrastructure, and developers across the nostr ecosystem.
 
 This progress is made possible by the generosity of our donors. If you'd like to
 help sustain this work and support the builders shaping the future of online
