--- a/data/blog/twelfth-wave-of-nostr-grants.mdx
+++ b/data/blog/twelfth-wave-of-nostr-grants.mdx
@@ -203,10 +203,10 @@ recognize their ongoing impact and provide the resources needed to keep
 building, iterating, and hardening essential components of the nostr stack.
 
 Including this round of funding, OpenSats is proud to have
-[allocated close to $10MM](/transparency)
-since the creation of _The Nostr Fund_
-—marking a mid-year milestone in our mission to support critical tools,
-infrastructure, and developers across the nostr ecosystem.
+[allocated more than $10MM](/transparency)
+to nostr projects since the creation of _The Nostr Fund_
+—marking an important milestone in our mission to support critical tools,
+infrastructure, and developers across the ecosystem.
 
 This progress is made possible by the generosity of our donors. If you'd like to
 help sustain this work and support the builders shaping the future of online
